--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,9 @@ input[type=number] { -moz-appearance:textfield; }
   margin-left: 2ch;
   display: none !important;
 }
+
+.card{
+  display: inline-block;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #dadada;
+}
