--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,14 @@
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: 'Josefin Sans', 'Roboto Mono', sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
 
-  --user-bg-color: 229 231 235 ;
+  --user-bg-color: 229 231 235;
   background-color: rgb(var(--user-bg-color)/ 1);
 
   /* CLARO 229 231 235 */
@@ -44,13 +45,15 @@
   border: 1px solid #060515;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-input[type=number] { -moz-appearance:textfield; }
+input[type=number] {
+  -moz-appearance: textfield;
+}
 
 .tox .tox-mbtn {
   margin: 5px !important;
@@ -62,7 +65,7 @@ input[type=number] { -moz-appearance:textfield; }
   display: none !important;
 }
 
-.card{
+.card {
   display: inline-block;
   border-radius: 10px;
   box-shadow: 0 0 10px #dadada;
