--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@
   border: 1px solid #060515;
 }
 
-input[type=number]::-webkit-inner-spin-button,
+/* input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
@@ -53,7 +53,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 input[type=number] {
   -moz-appearance: textfield;
-}
+} */
 
 .tox .tox-mbtn {
   margin: 5px !important;
